fix spacing

--- a/Assignments/Assignment - 01/style.css
+++ b/Assignments/Assignment - 01/style.css
@@ -152,6 +152,7 @@ nav ul a:hover {
 /* Featured Section */
 .features {
     margin-top: 5rem;
+    margin-bottom: 3rem;
 }
 
 .features .container {
@@ -198,7 +199,7 @@ nav ul a:hover {
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-    margin: 3rem auto;
+    margin: 6rem auto;
     padding: 2rem 0;
     border-radius: 8px;
     background: rgba(39, 39, 39, 0.05);
@@ -230,6 +231,7 @@ nav ul a:hover {
 /* instagram */
 .instagram {
     margin-top: 4rem;
+    margin-bottom: 4rem;
 }
 
 .instagram img {
@@ -238,7 +240,7 @@ nav ul a:hover {
 
 .instagram .container {
     gap: 10px;
-    justify-content: center;
+    /* justify-content: center; */
 }
 
 /* Subscribe */
@@ -246,9 +248,11 @@ nav ul a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 3rem auto;
+    margin: 5rem auto;
     color: #fff;
     background: url(./img/Rectangle\ 9.png);
+    background-position: center;
+    background-size: cover;
     width: 100%;
     padding: 4rem 0;
 }
